# exercices_mlops

./: pyproject.toml
.github/workflows/: ci-cd.yml
mlops_exo/: main_live_inference.py  main_train.py
tests/test_features/: test_holidays.py
