[tool.poetry]
name = "exercices-mlops"
version = "0.1.0"
description = ""
authors = ["lounis <lounis.ob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^2.0.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
mlflow = "^2.19.0"
pyarrow = "^18.1.0"
ruff = "^0.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
